# oidaui

./: .gitignore  AUTHORS  CMakeLists.txt  contributing.org  readme.org  todo.org
doc/: oidaui.org
examples/: readme.org
examples/android/: AndroidManifest.xml  makefile
include/: oidaui.h
include/oidaui/: common.h  error.h  font.h  oidaui.h
liboidaui/: CMakeLists.txt  canvas.cpp  canvas.h  canvas.hpp  cursor.hpp  driver.cpp  element.cpp  element.h  element.hpp  elements.cpp  errors.c  errors.h  locale.h  node.cpp  node.hpp
liboidaui/elements/: label.cpp  label.h  label.hpp
liboidaui/font/: font.cpp  font.h  font.hpp
liboidaui/util/: shader.hpp
test/: CMakeLists.txt  glfw_helper.cpp  test_glfw.cpp
